mdapi/Custom/objects/Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Property_A_Compass__c</fullName>
        <label>Street Compass</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>NW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_A_House_Number__c</fullName>
        <label>House #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_A_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_A_Street_Suffix__c</fullName>
        <label>Street Suffix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>*Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code_PreAcquisition_F__c</fullName>
        <formula>&apos;PROS-&apos; + UPPER(Region_Lookup__r.Property_Code_Base__c) + RIGHT(Name, LEN(Name) - 5)</formula>
        <label>Property Code PreAcquisition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code_PreAcquisition__c</fullName>
        <label>Property Code PreAcquisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code_Preacquisition_Number_Part__c</fullName>
        <formula>If(Len(Property_Code_PreAcquisition__c) == 15, Value(MID(Property_Code_PreAcquisition__c,10,6)), NULL)</formula>
        <label>Property Code Preacquisition Number Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Cross_Streets__c</fullName>
        <label>Property Cross Streets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <label>Property ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_MLS_Number__c</fullName>
        <description>Multiple Listing Service #</description>
        <inlineHelpText>Multiple Listing Service #</inlineHelpText>
        <label>MLS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Notes_UW__c</fullName>
        <inlineHelpText>Property Notes at Underwriting should contain notes intended to remain with the property record and will be visible post-acquisition to downstream IH teams.</inlineHelpText>
        <label>Property Notes @ UW</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_State_Text__c</fullName>
        <formula>Property_State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property_State_Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>BiddingProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <label>Property Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Home</fullName>
                    <default>true</default>
                    <label>Single Family Home</label>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhome</fullName>
                </value>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Triplex</fullName>
                </value>
                <value>
                    <fullName>Quad</fullName>
                </value>
                <value>
                    <fullName>Vacant Lot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <label>*Property Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Under Review</fullName>
                </value>
                <value>
                    <fullName>Open - In Contract</fullName>
                </value>
                <value>
                    <fullName>Dead - Declined</fullName>
                </value>
                <value>
                    <fullName>Dead - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Dead - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Dead - No Activity</fullName>
                </value>
                <value>
                    <fullName>Converted to Pipeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Price_as_prcnt_Peak__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0, Closing_Price__c / Previous_High_Value__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price as a % of Peak</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_as_prct_Replacement_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_OLD__c &gt; 0, Closing_Price__c / Replacement_Cost_Est_UW_OLD__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price % of Replacement @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ready_for_UW_Review_Date__c</fullName>
        <inlineHelpText>The date the agent changed the Status to &quot;Ready for Underwriting Review&quot;</inlineHelpText>
        <label>Ready for UW Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Lookup</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This is a text field which must be converted into the lookup value before using it in Prospect or Pipeline.</description>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rehab_Budget_Est_UW__c</fullName>
        <label>*Rehab Budget Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Contingency_Amount__c</fullName>
        <formula>Rehab_Budget_Est_UW__c - Rehab_Pre_Contingency_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rehab Contingency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Contingency__c</fullName>
        <formula>(Rehab_Budget_Est_UW__c - Rehab_Pre_Contingency_Budget__c) / Rehab_Pre_Contingency_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rehab Contingency %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rehab_Overhead__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, the percentage in this field was changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*0.0000, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rehab Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Pre_Contingency_Budget__c</fullName>
        <label>Rehab Pre-Contingency Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_1__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Rent Bump Start (month) -Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_2__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Rent Bump Start (month) -Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_3__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Rent Bump Start (month) -Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Inflation__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Rent Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Est_UW_OLD__c</fullName>
        <formula>Replacement_Cost_PSF_UW_OLD__c * Square_Feet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Cost Est UW OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Inflation__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Replacement Cost Inflation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_PSF_UW_OLD__c</fullName>
        <label>*Replacement Cost PSF UW OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_PSF_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0, Replacement_Value_Est_UW__c/Square_Feet__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Cost PSF UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Structure_UW__c</fullName>
        <label>Replacement Cost of Structure @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Land_Value_UW__c</fullName>
        <label>Replacement Land Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Reserves__c</fullName>
        <defaultValue>350</defaultValue>
        <label>Replacement Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Value_Est_UW__c</fullName>
        <formula>IF(
	AND(
		ISNULL(Replacement_Cost_Structure_UW__c ), 
		ISNULL(Replacement_Land_Value_UW__c)
	),
	null,
	(
		IF(Replacement_Cost_Structure_UW__c  &gt; 0, Replacement_Cost_Structure_UW__c , 0)
		+
		IF(Replacement_Land_Value_UW__c &gt; 0, Replacement_Land_Value_UW__c, 0)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Value Est UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserve_Inflation__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Reserve Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residence_APN__c</fullName>
        <formula>Residence__r.APN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence APN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence</label>
        <referenceTo>Residence__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Hot Mopped</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>Shingle</fullName>
                </value>
                <value>
                    <fullName>Slate</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <formula>IF(
		OR(
			$RecordType.Name = &apos;Bulk Acquisition&apos;,
			$RecordType.Name = &apos;Standard/REO Acquisition&apos;
		),
		(
			DATE(
				YEAR(Escrow_Expected_Close_Date__c) + (MONTH(Escrow_Expected_Close_Date__c) + Exit_Month__c)/12, 
				MOD((MONTH(Escrow_Expected_Close_Date__c) + Exit_Month__c + 1), 12),
				1
			)-1
		),
		(
			DATE(
				YEAR(DATEVALUE(CreatedDate)) + (MONTH(DATEVALUE(CreatedDate)) + Exit_Month__c)/12, 
				MOD((MONTH(DATEVALUE(CreatedDate)) + Exit_Month__c + 1), 12),
				1
			)
		)-1
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price_PSF__c</fullName>
        <formula>IF ( Square_Feet__c &gt; 0, Sale_Price__c / Square_Feet__c,  null  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <formula>((1+HPA_5_Year_CAGR__c)^ (Exit_Year__c) )*Market_Value_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <formula>Residence__r.School_District__c</formula>
        <label>School District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Costs_Percent__c</fullName>
        <defaultValue>0.06</defaultValue>
        <label>Selling Costs %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selling_Costs__c</fullName>
        <formula>Sale_Price__c * Selling_Costs_Percent__c*(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slow_Deal_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slow Deal Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <defaultValue>0.0325</defaultValue>
        <label>Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <label>*Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <formula>IF(
AND(
TEXT(Region__c) != &apos;Inland Empire&apos;,
TEXT(Region__c) != &apos;Chicago&apos;,
TEXT(Region__c) != &apos;&apos;
),
&apos;&apos;,
IF(
AND(
TEXT(Region__c) == &apos;Inland Empire&apos;,
LOWER(Property_County__c) == LOWER(&apos;Orange County&apos;) || LOWER(Property_County__c) == LOWER(&apos;Orange&apos;)
),
&apos;Orange County&apos;,
IF(
TEXT(Region__c) == &apos;Inland Empire&apos;,
&apos;Inland Empire&apos;,
IF(
TEXT(Region__c) == &apos;Chicago&apos;,
IF(
LOWER( Property_State__r.Name) == LOWER(&apos;IL&apos;) ,
&apos;IL&apos; ,
IF(
LOWER(Property_State__r.Name) == LOWER(&apos;MN&apos;),
&apos;MN&apos; ,
IF(
LOWER(Property_State__r.Name) == LOWER(&apos;WI&apos;),
&apos;WI&apos;,
&apos;Other&apos;
)
)
),
&apos;&apos;
)
)
)
)</formula>
        <label>Subregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Title Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect (Title Company)</relationshipLabel>
        <relationshipName>TitleCompanyProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_Policy_Cost_Est_UW__c</fullName>
        <defaultValue>IF(
OR(
$RecordType.Name = &apos;BrokerSite&apos;,
$RecordType.Name = &apos;Trustee Acquisition&apos;
),
0,
null
)</defaultValue>
        <label>*Title Policy Cost Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Processing</value>
            </filterItems>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PropertiesTransactionCoordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect (Trustee Company)</relationshipLabel>
        <relationshipName>TrusteeCompanyProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Underwriting_Notes__c</fullName>
        <inlineHelpText>Underwriting Notes will be visible only to the acquisition team and will not move with the property record post-acquisition.</inlineHelpText>
        <label>Underwriting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsuccessful_Bid_Reason__c</fullName>
        <label>Unsuccessful Bid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IH Offer Withdrawn/Decline</fullName>
                </value>
                <value>
                    <fullName>Other buyer  chosen for non-economic reasons</fullName>
                </value>
                <value>
                    <fullName>Outbid</fullName>
                </value>
                <value>
                    <fullName>Sale Postponed/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X12_Month_LIBOR__c</fullName>
        <defaultValue>0.00263</defaultValue>
        <label>12-Month LIBOR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_Blt__c</fullName>
        <description>This is a formula field that translates the year built number field (Year_Built__c) into text to it can be displayed on the page layout without a comma.</description>
        <formula>TEXT(Year_Built__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Year Blt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>*Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Plus_4__c</fullName>
        <label>Zip Plus 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>AH4R_AH_LLC_LA_IE_SAC_149</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>HOA_Options__c</columns>
        <columns>Bulk_Deal__c</columns>
        <columns>APN__c</columns>
        <columns>Title_Company__c</columns>
        <columns>Other_Closing_Costs_Est_UW__c</columns>
        <columns>Escrow_Expected_Close_Date__c</columns>
        <columns>Escrow_Opened_Date__c</columns>
        <columns>Inspection_Period_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AH4R - AH LLC LA/IE/SAC 149</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.Bulk</value>
        </filters>
        <label>AH4R - AH LLC LA/IE/SAC 149</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH4R_AH_LLC_LA_IE_SAC_149_LA</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>HOA_Options__c</columns>
        <columns>Bulk_Deal__c</columns>
        <columns>APN__c</columns>
        <columns>Title_Company__c</columns>
        <columns>Other_Closing_Costs_Est_UW__c</columns>
        <columns>Escrow_Expected_Close_Date__c</columns>
        <columns>Escrow_Opened_Date__c</columns>
        <columns>Inspection_Period_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AH4R - AH LLC LA/IE/SAC 149</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.Bulk</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <label>AH4R - AH LLC LA/IE/SAC 149 LA</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_LA_County</role>
            <role>Team_Member_LA_County</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH4R_AH_LLC_LA_IE_SAC_38</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>HOA_Options__c</columns>
        <columns>Bulk_Deal__c</columns>
        <columns>APN__c</columns>
        <columns>Title_Company__c</columns>
        <columns>Other_Closing_Costs_Est_UW__c</columns>
        <columns>Escrow_Expected_Close_Date__c</columns>
        <columns>Escrow_Opened_Date__c</columns>
        <columns>Inspection_Period_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AH4R-AH LLC/LA/IE/SAC 38</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.Bulk</value>
        </filters>
        <label>AH4R-AH LLC/LA/IE/SAC 38</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Inland_Empire</role>
            <role>Executive_LA_County</role>
            <role>Executive_Sacramento</role>
            <role>Team_Member_Inland_Empire</role>
            <role>Team_Member_LA_County</role>
            <role>Team_Member_Sacramento</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AV_Real_Estate_Fund_LLC_Bulk_8</fullName>
        <columns>NAME</columns>
        <columns>Property_Street__c</columns>
        <columns>Bulk_Deal__c</columns>
        <columns>Acquisitions_Analyst__c</columns>
        <columns>Property_Code_PreAcquisition_F__c</columns>
        <columns>Title_Company__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Baths__c</columns>
        <columns>Bedrooms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AV Real Estate Fund LLC - Bulk 8</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.Bulk</value>
        </filters>
        <label>AV Real Estate Fund LLC - Bulk 8</label>
        <sharedTo>
            <group>Los_Angeles_Bulk_Deals</group>
            <group>Region_Controller_Bookkeepers_LA</group>
            <group>Region_Los_Angeles</group>
            <role>Executive</role>
            <role>Executive_LA_County</role>
            <role>Team_Member_LA_County</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZ_Bidder_Records_All</fullName>
        <columns>NAME</columns>
        <columns>Property_Code_PreAcquisition__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>Property_Street__c</columns>
        <columns>AZB_Trustee_Sale_Date__c</columns>
        <columns>AZB_Bid_Status__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.AZ_Bidder</value>
        </filters>
        <label>AZ Bidder Records - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Additional_Signatures_Needed</fullName>
        <columns>NAME</columns>
        <columns>Property_Street__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>B_Status__c</columns>
        <columns>IH_Underwriting_Status_to_Agent__c</columns>
        <columns>Escrow_Opened_Date__c</columns>
        <columns>Contract_Date__c</columns>
        <columns>Property_Code_PreAcquisition__c</columns>
        <columns>Prospect_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect__c.BrokerSite</value>
        </filters>
        <filters>
            <field>B_Status__c</field>
            <operation>equals</operation>
            <value>Additional Signatures Needed</value>
        </filters>
        <label>Additional Signatures Needed</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Code_PreAcquisition__c</columns>
        <columns>Region__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>AZB_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Florida</fullName>
        <columns>NAME</columns>
        <columns>Property_Code_PreAcquisition__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>Prospect_Status__c</columns>
        <columns>AZB_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Jacksonville,Miami,Orlando,Tampa</value>
        </filters>
        <label>All Florida</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>